--- a/kategori.html
+++ b/kategori.html
@@ -13,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
-    <!-- Csutom Style -->
+    <!-- Custom Style -->
     <link rel="stylesheet" href="style.css">
 
     <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
@@ -118,7 +118,7 @@
                 </div> <!-- /post-->
 
                 <!-- pagination -->
-                <nav class="border-bottom pt-4 pb-2 d-flex justify-content-center">
+                <nav class="nav-bb pt-4 pb-2 d-flex justify-content-center">
                     <ul class="pagination">
                         <li class="page-item disabled" aria-disabled="true" aria-label="« Previous">
                             <span class="page-link" aria-hidden="true">‹</span>
