--- a/lihat-post.html
+++ b/lihat-post.html
@@ -13,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
-    <!-- Csutom Style -->
+    <!-- Custom Style -->
     <link rel="stylesheet" href="style.css">
 
     <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
@@ -40,7 +40,7 @@
         <div class="row">
             <div class="col-md-9 p-0">
 
-                <article class="border-bottom px-3">
+                <article class="px-3">
                     <h1 class="mt-4 fw-bold">Lihat Post</h1>
                     <ul class="list-inline">
                         <li class="list-inline-item text-muted small"><i class="bi bi-calendar4-event"></i> Selasa, 21-01-2020</li>
