Nambahi border-bottom di qoute/jumbotron

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 </div> <!-- /Carausel-->
 
                 <!-- Blockquote-->
-                <div class="container-fluid pt-4 border-bottom bg-light">
+                <div id="jumbo" class="container-fluid py-4 bg-light"> <!-- kalau mau bikin border bottom permanent tinggal tambah border-bottom dan hapus #jumbo-->
                     <figure class="text-center">
                         <blockquote class="blockquote">
                             <p>A well-known quote, contained in a blockquote element.</p>
