--- a/index.html
+++ b/index.html
@@ -48,12 +48,9 @@
                 <!-- Carousel -->
                 <div id="carouselExampleDark" class="carousel carousel-dark slide p-0" data-bs-ride="carousel">
                     <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
-                            aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
-                            aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
-                            aria-label="Slide 3"></button>
+                        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
                     </div>
 
                     <div class="carousel-inner">
@@ -62,14 +59,12 @@
                             <div class="carousel-caption">
                                 <h3><a href="lihat-post.html" class="text-pink">Slide Satu</a></h3>
                                 <ul class="list-inline">
-                                    <li class="list-inline-item text-white small"><i class="bi bi-calendar4-event"></i>
-                                        Selasa, 21-01-2020</li>
-                                    <li class="list-inline-item text-white small"><i class="bi bi-folder2"></i><a
-                                            href="#" class="text-pink"> Musik</a></li>
+                                    <li class="list-inline-item text-white small"><i class="bi bi-calendar4-event"></i> Selasa, 21-01-2020</li>
+                                    <li class="list-inline-item text-white small"><i class="bi bi-folder2"></i><a href="#" class="text-pink"> Musik</a></li>
                                 </ul>
                                 <p class="d-none d-sm-block text-white">Lorem ipsum dolor sit amet, consectetur
                                     adipiscing elit. Integer posuere erat a ante. Nulla vitae elit libero, a pharetra
-                                    augue mollis interdum.</p>
+                                    augue mollis interdum. Mauris et lobortis erat, sit amet aliquet orci. Etiam porttitor nulla ac augue venenatis semper. Sed vel lectus sed eros scelerisque ornare. Nullam sodales aliquet nisi, in ornare urna imperdiet id. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Phasellus ligula nulla, maximus sit amet sem a, faucibus cursus purus.</p>
                             </div>
                         </div>
                         <div class="carousel-item" data-bs-interval="5000">
