--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
                                 </ul>
                                 <p class="d-none d-sm-block text-white">Lorem ipsum dolor sit amet, consectetur
                                     adipiscing elit. Integer posuere erat a ante. Nulla vitae elit libero, a pharetra
-                                    augue mollis interdum.</p>
+                                    augue mollis interdum. Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit. Integer posuere erat a ante. Nulla vitae elit libero, a pharetra
+                                    augue mollis interdum. Mauris et lobortis erat, sit amet aliquet orci. Etiam porttitor nulla ac augue venenatis semper. Sed vel lectus sed eros scelerisque ornare. Nullam sodales aliquet nisi, in ornare urna imperdiet id. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
                             </div>
                         </div>
                         <div class="carousel-item" data-bs-interval="5000">
@@ -140,8 +142,7 @@
                                     <li class="list-inline-item text-muted small"><i class="bi bi-folder2"></i><a
                                             href="#" class="text-pink"> Musik</a></li>
                                 </ul>
-                                <p class="card-text text-justify">Ut a leo vel est faucibus fermentum sagittis vitae
-                                    lectus. Proin in leo id dui rhoncus posuere ut ut velit. Duis posuere pellentesque
+                                <p class="card-text text-justify">Duis posuere pellentesque
                                     facilisis. Vestibulum et velit luctus, mollis libero imperdiet, pretium nisl. Etiam
                                     euismod, massa at accumsan maximus, sem enim pulvinar mi, ac euismod felis odio at
                                     purus.</p>
@@ -191,8 +192,7 @@
                                             href="#" class="text-pink"> Musik</a></li>
                                 </ul>
                                 <p class="card-text text-justify">Ut a leo vel est faucibus fermentum sagittis vitae
-                                    lectus. Proin in leo id dui rhoncus posuere ut ut velit. Duis posuere pellentesque
-                                    facilisis. Vestibulum et velit luctus, mollis libero imperdiet, pretium nisl. Etiam
+                                    lectus. Proin in leo id dui rhoncus posuere ut ut velit. Etiam
                                     euismod, massa at accumsan maximus, sem enim pulvinar mi, ac euismod felis odio at
                                     purus.</p>
                             </div>
@@ -216,10 +216,7 @@
                                             href="#" class="text-pink"> Musik</a></li>
                                 </ul>
                                 <p class="card-text text-justify">Ut a leo vel est faucibus fermentum sagittis vitae
-                                    lectus. Proin in leo id dui rhoncus posuere ut ut velit. Duis posuere pellentesque
-                                    facilisis. Vestibulum et velit luctus, mollis libero imperdiet, pretium nisl. Etiam
-                                    euismod, massa at accumsan maximus, sem enim pulvinar mi, ac euismod felis odio at
-                                    purus.</p>
+                                    lectus. Proin in leo id dui rhoncus posuere ut ut velit.</p>
                             </div>
                         </div>
                     </div>
